--- a/index.html
+++ b/index.html
@@ -1,54 +1,63 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- FONT AWESOME (ICONS) -->
+    <script src="https://kit.fontawesome.com/57542fd59d.js"></script>
+
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Lato&display=swap" rel="stylesheet">
+</head>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<body>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 
-  </head>
-  <body>
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
     <div class="wrapper">
-      <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <div id="start">
+            <header>
+                <div class="top">
+                    <p>philip chan</p>
+                </div>
+            </header>
+            <section>
+                <div id="start-directory">
+                    <h1 class="about" data-text="about">about</h1>
+                    <h1 class="projects" data-text="projects">projects</h1>
+                    <h1 class="employment" data-text="employment">employment</h1>
+                    <h1 class="education" data-text="education">education</h1>
+                </div>
+            </section>
+            <footer>
+                <div id="start-icons">
+                    <a href="https://www.linkedin.com/in/philip-chan-aa859b143/"><i class="fab fa-linkedin-in"></i></a> 
+                    <a href="https://github.com/hungrypc"><i class="fab fa-github"></i></a> 
+                    <a href="https://www.instagram.com/hungrypc/"><i class="fab fa-instagram"></i></a> 
+                    <a href="mailto:philipchanhk626@gmail.com"><i class="fas fa-envelope"></i></a> 
+                    <a href="https://youtu.be/FbccrO8qKog?t=23"><i class="fab fa-aviato"></i></a> 
+                </div>
+            </footer>
+        </div>
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-
-      </header>
-      <section>
-
-      {{ content }}
-
-      </section>
-      <footer>
-   
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-
-        <p><small>Hosted on GitHub Pages &mdash;</small></p>
-      </footer>
     </div>
-  </body>
+</body>
+
 </html>
