content box and slider'

--- a/index.html
+++ b/index.html
@@ -33,20 +33,35 @@
 
     <div class="wrapper">
         <div id="start">
-            <header>
+
                 <div class="top">
                     <p>philip chan</p>
                 </div>
-            </header>
-            <section>
+
+
                 <div id="start-directory">
-                    <h1 class="about" data-text="about">about</h1>
-                    <h1 class="projects" data-text="projects">projects</h1>
-                    <h1 class="employment" data-text="employment">employment</h1>
-                    <h1 class="education" data-text="education">education</h1>
+                    <a href="#about-content"><h1 class="about" data-text="about">about</h1></a> 
+                    <a href="#projects-content"><h1 class="projects" data-text="projects">projects</h1></a> 
+                    <a href="#employment-content"><h1 class="employment" data-text="employment">employment</h1></a> 
+                    <a href="#education-content"><h1 class="education" data-text="education">education</h1></a> 
                 </div>
-            </section>
-            <footer>
+
+                <div id="content-box">
+                    <div class="slide" id="about-content">
+                        <p>1</p>
+                    </div>
+                    <div class="slide" id="projects-content">
+                        <p>2</p>
+                    </div>
+                    <div class="slide" id="employment-content">
+                        <p>3</p>
+                    </div>
+                    <div class="slide" id="education-content">
+                        <p>4</p>
+                    </div>
+                </div>
+
+
                 <div id="start-icons">
                     <a href="https://www.linkedin.com/in/philip-chan-aa859b143/"><i class="fab fa-linkedin-in"></i></a> 
                     <a href="https://github.com/hungrypc"><i class="fab fa-github"></i></a> 
@@ -54,7 +69,7 @@
                     <a href="mailto:philipchanhk626@gmail.com"><i class="fas fa-envelope"></i></a> 
                     <a href="https://youtu.be/FbccrO8qKog?t=23"><i class="fab fa-aviato"></i></a> 
                 </div>
-            </footer>
+
         </div>
 
     </div>
