filling contents slowly but surely

--- a/index.html
+++ b/index.html
@@ -48,19 +48,64 @@
 
                 <div id="content-box">
                     <div class="slide" id="about-content">
-                        <p>1</p>
+                        <h3>about me</h3>
+                        <p>I am a web developer, leader and creative problem solver. I have experience managing teams and delivering IT solutions. My business sense and communication skills are a strong foundation for continued learning. After running a hotel, teaching snowboarding and making wine, I have discovered my passion in web development. I love writing code that empowers users.</p>
+                        <br>
+                        <h3>skills</h3>
+                        <h5>languages & frameworks</h5>
+                            <ul>
+                                <li>JavaScript, jQuery, Node, AJAX, Express, React</li>
+                                <li>HTML5, CSS3, SASS, Bootstrap</li>
+                                <li>Ruby, Rails,</li>
+                            </ul>
+                        <h5>systems & databases</h5>
+                            <ul>
+                                <li>Git, Github</li>
+                                <li>MongoDB, PostgreSQL, Knex</li>
+                            </ul>
+                        <h5>additional skills</h5>
+                            <ul>
+                                <li>Adobe Photoshop, Adobe Illustrator, Adobe Lightroom</li>
+                                <li>Sketch, Final Cut Pro X</li>
+                            </ul>
                     </div>
                     <div class="slide" id="projects-content">
-                        <p>2</p>
+                        <h3>projects</h3>
+                        <br>
+                        <h5>schoodle</h5>
+                        <h5>tweeter</h5>
+                        <p>individual project: tweeter is a simple, single-page Twitter clone. built upon to implement newly learned skills (JavaScript, jQuery, AJAX, Node, Express, MongoDB, HTML, CSS)</p>
                     </div>
                     <div class="slide" id="employment-content">
-                        <p>3</p>
+                        <h3>employment</h3>
+                        <br>
+                        <h5>sales associate</h5>
+                        <p>ingledew's shoes &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp jan '17 ~ jul '17</p>
+                        <p></p>
+                        <h5>human resources/administrative intern</h5>
+                        <p>moregoal industries, ltd &nbsp &nbsp &nbsp &nbsp hong kong &nbsp &nbsp &nbsp &nbsp may '16 ~ aug '16</p>
+                        <br>
+                        <h3>other work exp</h3>
+                        <h5>volunteer</h5>
+                        <p>vancouver start up week &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp sep '18</p>
                     </div>
                     <div class="slide" id="education-content">
-                        <p>4</p>
+                        <h3>education</h3>
+                        <br>
+                        <h5>lighthouse labs</h5>
+                        <p>full-stack web dev bootcamp</p>
+                        <h5>university of british columbia</h5>
+                        <p>bachelor of arts</p>
+                            <ul>
+                                <li>psychology</li>
+                            </ul>
+                        <h5>the chinese university of hong kong</h5>
+                        <p>summer exchange</p>
+                            <ul>
+                                <li>international business</li>
+                            </ul>
                     </div>
                 </div>
-
 
                 <div id="start-icons">
                     <a href="https://www.linkedin.com/in/philip-chan-aa859b143/"><i class="fab fa-linkedin-in"></i></a> 
