content slowly coming together

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -29,6 +30,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     
+        <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
+  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
+  crossorigin="anonymous"></script>
     <script src="/main.js"></script>
 
     <div class="wrapper">
@@ -49,7 +54,11 @@
                 <div id="content-box">
                     <div class="slide" id="about-content">
                         <h3>about me</h3>
-                        <p>I am a web developer, leader and creative problem solver. I have experience managing teams and delivering IT solutions. My business sense and communication skills are a strong foundation for continued learning. After running a hotel, teaching snowboarding and making wine, I have discovered my passion in web development. I love writing code that empowers users.</p>
+                        <p>Full Stack Web Developer with a passion for building apps and creative problem solving. 
+                            Strong attention to details and good time management from 8 years of experience in public finances. 
+                            Dedicated life-long learner always eager to discover new things.</p>
+                        <h3>contact</h3>
+                        <p><i class="far fa-envelope"></i> &nbsp philipchanhk626@gmail.com <br/><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
                         <br>
                         <h3>skills</h3>
                         <h5>languages & frameworks</h5>
@@ -72,33 +81,59 @@
                     <div class="slide" id="projects-content">
                         <h3>projects</h3>
                         <br>
+                        <!-- <h5>chattyapp</h5>
+                        <br>
+                        <br> -->
                         <h5>schoodle</h5>
+                        <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap,PostgresSQL, Knex</i></strong><br/>
+                        schoodle is a full stack web applicatin that allows users to create events and invite participants with a randomly generated event URL. 
+                        it is a group midterm project, i was mainly responsible for front-end work but also contributed to the back-end</p>
+                        <a href="https://github.com/yanlinchengrui/schoodle_skeleton">view on github</a>
+                        <br>
+                        <br>
                         <h5>tweeter</h5>
-                        <p>individual project: tweeter is a simple, single-page Twitter clone. built upon to implement newly learned skills (JavaScript, jQuery, AJAX, Node, Express, MongoDB, HTML, CSS)</p>
+                        <p><strong><i>Node.js, Express, JavaScript, jQuery, AJAX,  MongoDB, HTML, CSS</i></strong><br/>
+                        tweeter is a simple, single-page twitter clone. built upon to implement newly learned skills</p>
+                        <a href="https://github.com/hungrypc/tweeter">view on github</a>
                     </div>
                     <div class="slide" id="employment-content">
                         <h3>employment</h3>
                         <br>
                         <h5>sales associate</h5>
                         <p>ingledew's shoes &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp jan '17 ~ jul '17</p>
-                        <p></p>
+                        <ul>
+                            <li>provided exceptional customer service while representing high-standard brands</li>
+                            <li>consistently achieved above target sale goals</li>
+                            <li>performed sales support functions on POS systems</li>
+                        </ul>
                         <h5>human resources/administrative intern</h5>
                         <p>moregoal industries, ltd &nbsp &nbsp &nbsp &nbsp hong kong &nbsp &nbsp &nbsp &nbsp may '16 ~ aug '16</p>
+                        <ul>
+                            <li>organized large scale inventory and stock</li>
+                            <li>provided service to customer inquiry and handled paper filing</li>
+                            <li>utilized microsoft word and excel to implement business solutions</li>
+                        </ul>
                         <br>
                         <h3>other work exp</h3>
                         <h5>volunteer</h5>
                         <p>vancouver start up week &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp sep '18</p>
+                        <ul>
+                            <li>checked in attendees using Sched Count app</li>
+                            <li>provided service and information for large events, including the largest event of the week (Recruitment Fair)</li>
+                        </ul>
                     </div>
                     <div class="slide" id="education-content">
                         <h3>education</h3>
                         <br>
                         <h5>lighthouse labs</h5>
                         <p>full-stack web dev bootcamp</p>
+                        <br>
                         <h5>university of british columbia</h5>
                         <p>bachelor of arts</p>
                             <ul>
                                 <li>psychology</li>
                             </ul>
+                        <br>
                         <h5>the chinese university of hong kong</h5>
                         <p>summer exchange</p>
                             <ul>
