--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
 
                 <div id="start-directory">
-                    <a href="#about-content"><h1 class="about sd" data-text="about">about</h1></a> 
-                    <a href="#projects-content"><h1 class="projects sd" data-text="projects">projects</h1></a> 
-                    <a href="#employment-content"><h1 class="employment sd" data-text="employment">employment</h1></a> 
-                    <a href="#education-content"><h1 class="education sd" data-text="education">education</h1></a> 
+                    <a href="#about-content"><h1 class="about sd" data-text="ABOUT">ABOUT</h1></a> 
+                    <a href="#projects-content"><h1 class="projects sd" data-text="PROJECTS">PROJECTS</h1></a> 
+                    <a href="#employment-content"><h1 class="employment sd" data-text="WORK">WORK</h1></a> 
+                    <a href="#education-content"><h1 class="education sd" data-text="EDUCATION">EDUCATION</h1></a> 
                 </div>
 
                 <div id="content-box">
@@ -84,60 +84,72 @@
                         <!-- <h5>chattyapp</h5>
                         <br>
                         <br> -->
-                        <h5>schoodle</h5>
+                        <h5>Schoodle</h5>
                         <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap,PostgresSQL, Knex</i></strong><br/>
-                        schoodle is a full stack web applicatin that allows users to create events and invite participants with a randomly generated event URL. 
-                        it is a group midterm project, i was mainly responsible for front-end work but also contributed to the back-end</p>
+                        Schoodle is a full stack web applicatin that allows users to create events and invite participants with a randomly generated event URL. 
+                        it is a group midterm project WHERE I was mainly responsible for front-end work but contributed to the back-end as well</p>
                         <a href="https://github.com/yanlinchengrui/schoodle_skeleton">view on github</a>
                         <br>
                         <br>
-                        <h5>tweeter</h5>
+                        <h5>Tweeter</h5>
                         <p><strong><i>Node.js, Express, JavaScript, jQuery, AJAX,  MongoDB, HTML, CSS</i></strong><br/>
-                        tweeter is a simple, single-page twitter clone. built upon to implement newly learned skills</p>
+                        Tweeter is a simple, single-page Twitter clone. Built upon to implement newly learned skills</p>
                         <a href="https://github.com/hungrypc/tweeter">view on github</a>
                     </div>
                     <div class="slide" id="employment-content">
                         <h3>employment</h3>
                         <br>
-                        <h5>sales associate</h5>
-                        <p>ingledew's shoes &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp jan '17 ~ jul '17</p>
+                        <h5>Sales Associate</h5>
+                        <div class="info">Ingledew's Shoes</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">Jan 2017 - Jul 2017</div>
                         <ul>
-                            <li>provided exceptional customer service while representing high-standard brands</li>
-                            <li>consistently achieved above target sale goals</li>
-                            <li>performed sales support functions on POS systems</li>
+                            <li>Provided  customer service while representing high-fashion brands</li>
+                            <li>Consistently achieved above target sale goals</li>
+                            <li>Performed sales support functions on POS systems</li>
                         </ul>
-                        <h5>human resources/administrative intern</h5>
-                        <p>moregoal industries, ltd &nbsp &nbsp &nbsp &nbsp hong kong &nbsp &nbsp &nbsp &nbsp may '16 ~ aug '16</p>
+                        <h5>Human Resources/Administrative Intern</h5>
+                        <div class="info">Moregoal Industries, ltd</div>
+                        <div class="location">Hong Kong</div>
+                        <div class="year">May 2016 - Aug 2016</div>
                         <ul>
-                            <li>organized large scale inventory and stock</li>
-                            <li>provided service to customer inquiry and handled paper filing</li>
-                            <li>utilized microsoft word and excel to implement business solutions</li>
+                            <li>Organized large scale inventory and stock</li>
+                            <li>Provided service to customer inquiry and handled paper filing</li>
+                            <li>Utilized microsoft word and excel to implement business solutions</li>
                         </ul>
                         <br>
                         <h3>other work exp</h3>
-                        <h5>volunteer</h5>
-                        <p>vancouver start up week &nbsp &nbsp &nbsp &nbsp vancouver, bc &nbsp &nbsp &nbsp &nbsp sep '18</p>
+                        <h5>Volunteer</h5>
+                        <div class="info">Vancouver Start-up Week</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">Sep 2018</div>
                         <ul>
-                            <li>checked in attendees using Sched Count app</li>
-                            <li>provided service and information for large events, including the largest event of the week (Recruitment Fair)</li>
+                            <li>Checked in attendees using Sched Count app</li>
+                            <li>Provided service and information for large events, including the largest event of the week (Recruitment Fair)</li>
                         </ul>
                     </div>
                     <div class="slide" id="education-content">
                         <h3>education</h3>
                         <br>
-                        <h5>lighthouse labs</h5>
-                        <p>full-stack web dev bootcamp</p>
+                        <h5>Lighthouse Labs</h5>
+                        <div class="info">Vancouver, BC</div>
+                        <div class="location">May 2019 - Aug 2019</div>
+                        <p>Full-stack Web Dev Bootcamp</p>
                         <br>
-                        <h5>university of british columbia</h5>
-                        <p>bachelor of arts</p>
+                        <h5>University of British Columbia</h5>
+                        <div class="info">Vancouver, BC</div>
+                        <div class="location">2012 - 2018</div>
+                        <p>Bachelor of Arts</p>
                             <ul>
-                                <li>psychology</li>
+                                <li>Psychology</li>
                             </ul>
                         <br>
-                        <h5>the chinese university of hong kong</h5>
-                        <p>summer exchange</p>
+                        <h5>The Chinese University of Hong Kong</h5>
+                        <div class="info">Hong Kong</div>
+                        <div class="location">May 2015 - Aug 2015</div>
+                        <p>Summer Exchange</p>
                             <ul>
-                                <li>international business</li>
+                                <li>International Business</li>
                             </ul>
                     </div>
                 </div>
