--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                 <div id="content-box">
                     <div class="slide" id="about-content">
                         <h3>about me</h3>
-                        <p>Full Stack Web Developer with a passion for building apps and creative problem solving. 
-                            Strong attention to details and good time management from 8 years of experience in public finances. 
-                            Dedicated life-long learner always eager to discover new things.</p>
+                        <p>Full Stack Web Developer with an interest for design and creative problem solving. 
+                            Detail-driven, efficieny-oriented, and a dedicated life-long learner always eager to discover new things.</p>
                         <h3>contact</h3>
                         <p><i class="far fa-envelope"></i> &nbsp philipchanhk626@gmail.com <br/><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
                         <br>
@@ -88,13 +87,13 @@
                         <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap,PostgresSQL, Knex</i></strong><br/>
                         Schoodle is a full stack web applicatin that allows users to create events and invite participants with a randomly generated event URL. 
                         it is a group midterm project WHERE I was mainly responsible for front-end work but contributed to the back-end as well</p>
-                        <a href="https://github.com/yanlinchengrui/schoodle_skeleton">view on github</a>
+                        <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on github</a>
                         <br>
                         <br>
                         <h5>Tweeter</h5>
                         <p><strong><i>Node.js, Express, JavaScript, jQuery, AJAX,  MongoDB, HTML, CSS</i></strong><br/>
                         Tweeter is a simple, single-page Twitter clone. Built upon to implement newly learned skills</p>
-                        <a href="https://github.com/hungrypc/tweeter">view on github</a>
+                        <a href="https://github.com/hungrypc/tweeter" target="_blank">view on github</a>
                     </div>
                     <div class="slide" id="employment-content">
                         <h3>employment</h3>
@@ -132,22 +131,23 @@
                         <h3>education</h3>
                         <br>
                         <h5>Lighthouse Labs</h5>
-                        <div class="info">Vancouver, BC</div>
-                        <div class="location">May 2019 - Aug 2019</div>
-                        <p>Full-stack Web Dev Bootcamp</p>
-                        <br>
+                        <div class="info">Bootcamp</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">May 2019 - Aug 2019</div>
+                        <ul>
+                            <li>Full-Stack Web Developer Bootcamp</li>
+                        </ul>
                         <h5>University of British Columbia</h5>
-                        <div class="info">Vancouver, BC</div>
-                        <div class="location">2012 - 2018</div>
-                        <p>Bachelor of Arts</p>
+                        <div class="info">Bachelor of Arts</div>
+                        <div class="location">Vancouver, BC</div>
+                        <div class="year">2012 - 2018</div>
                             <ul>
                                 <li>Psychology</li>
                             </ul>
-                        <br>
                         <h5>The Chinese University of Hong Kong</h5>
-                        <div class="info">Hong Kong</div>
-                        <div class="location">May 2015 - Aug 2015</div>
-                        <p>Summer Exchange</p>
+                        <div class="info">Summer Exchange</div>
+                        <div class="location">Hong Kong</div>
+                        <div class="year">May 2015 - Aug 2015</div>
                             <ul>
                                 <li>International Business</li>
                             </ul>
