--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div id="content-box">
                     <div class="slide" id="about-content">
                         <h3>about me</h3>
-                        <p>Full Stack Web Developer with an interest for design and creative problem solving. 
-                            Detail-driven, efficieny-oriented, and a dedicated life-long learner always eager to discover new things.</p>
+                        <p>Junior Full Stack Web Developer with an interest for design and creative problem solving. 
+                            Detail-driven, efficieny-oriented, and a dedicated life-long learner who is always eager to discover new things.</p>
                         <h3>contact</h3>
                         <p><i class="far fa-envelope"></i> &nbsp philipchanhk626@gmail.com <br/><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
                         <br>
