testing new laptop

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="slide" id="projects-content">
                         <h3>projects</h3>
                         <br>
-                        <!-- <h5>chattyapp</h5>
+                        <!-- <h5>chattyapp/jungle</h5>
                         <br>
                         <br> -->
                         <h5>Schoodle</h5>
