--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                     <a href="#employment-content"><h1 class="employment sd" data-text="WORK">WORK</h1></a> 
                     <a href="#education-content"><h1 class="education sd" data-text="EDUCATION">EDUCATION</h1></a> 
                 </div>
+                <div id="start-icons">
+                    <a href="https://www.linkedin.com/in/philip-chan-aa859b143/"><i class="fab fa-linkedin-in"></i></a> 
+                    <a href="https://github.com/hungrypc"><i class="fab fa-github"></i></a> 
+                    <!-- <a href="https://www.instagram.com/hungrypc/"><i class="fab fa-instagram"></i></a>  -->
+                    <a href="mailto:philipchanhk626@gmail.com"><i class="fas fa-envelope"></i></a> 
+                    <!-- <a href="https://youtu.be/FbccrO8qKog?t=23"><i class="fab fa-aviato"></i></a>  -->
+                </div>
 
                 <div id="content-box">
                     <div class="slide" id="about-content">
@@ -57,9 +64,10 @@
                         <p>Junior Full Stack Web Developer with an interest for design and creative problem solving. 
                             Detail-driven, efficieny-oriented, and a dedicated life-long learner who is always eager to discover new things.</p>
                         <h3>contact</h3>
-                        <p><i class="far fa-envelope"></i> &nbsp philipchanhk626@gmail.com <br/><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p>
-                        <br>
-                        <h3>skills</h3>
+                        <!-- <p><i class="far fa-envelope"></i> &nbsp philipchanhk626@gmail.com  <br/><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p> -->
+                        <p class="ab"><i class="far fa-envelope"></i> &nbsp <a href="mailto:philipchanhk626@gmail.com">philipchanhk626@gmail.com</a></p> <p class="ab"><i class="fab fa-github"></i> &nbsp <a href="https://github.com/hungrypc">github/hungrypc</a></p> 
+                        <p class="ab"><i class="fas fa-phone"></i> &nbsp (604) 728 6850</p> <p class="ab"><i class="fab fa-linkedin-in"></i> &nbsp <a href="https://www.linkedin.com/in/philip-chan-aa859b143/">linkedin</a></p> 
+                        <h3 class="margin">skills</h3>
                         <h5>languages & frameworks</h5>
                             <ul>
                                 <li>JavaScript, jQuery, Node, AJAX, Express, React</li>
@@ -84,7 +92,7 @@
                         <br>
                         <br> -->
                         <h5>Schoodle</h5>
-                        <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap,PostgresSQL, Knex</i></strong><br/>
+                        <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL, Knex</i></strong><br/>
                         Schoodle is a full stack web applicatin that allows users to create events and invite participants with a randomly generated event URL. 
                         it is a group midterm project WHERE I was mainly responsible for front-end work but contributed to the back-end as well</p>
                         <a href="https://github.com/yanlinchengrui/schoodle_skeleton" target="_blank">view on github</a>
@@ -133,35 +141,27 @@
                         <h5>Lighthouse Labs</h5>
                         <div class="info">Bootcamp</div>
                         <div class="location">Vancouver, BC</div>
-                        <div class="year">May 2019 - Aug 2019</div>
-                        <ul>
-                            <li>Full-Stack Web Developer Bootcamp</li>
-                        </ul>
+                        <div class="year">2019</div>
+                        <br>
+                        <p>Full-Stack Web Developer Bootcamp</p>
+
                         <br>
                         <h5>University of British Columbia</h5>
                         <div class="info">Bachelor of Arts</div>
                         <div class="location">Vancouver, BC</div>
                         <div class="year">2012 - 2018</div>
-                            <ul>
-                                <li>Psychology</li>
-                            </ul>
+                        <br>
+                        <p>Psychology</p> 
+
                         <br>
                         <h5>The Chinese University of Hong Kong</h5>
                         <div class="info">Summer Exchange</div>
                         <div class="location">Hong Kong</div>
                         <div class="year">May 2015 - Aug 2015</div>
-                            <ul>
-                                <li>International Business</li>
-                            </ul>
-                    </div>
-                </div>
+                        <br>
+                        <p>International Business</p> 
 
-                <div id="start-icons">
-                    <a href="https://www.linkedin.com/in/philip-chan-aa859b143/"><i class="fab fa-linkedin-in"></i></a> 
-                    <a href="https://github.com/hungrypc"><i class="fab fa-github"></i></a> 
-                    <a href="https://www.instagram.com/hungrypc/"><i class="fab fa-instagram"></i></a> 
-                    <a href="mailto:philipchanhk626@gmail.com"><i class="fas fa-envelope"></i></a> 
-                    <a href="https://youtu.be/FbccrO8qKog?t=23"><i class="fab fa-aviato"></i></a> 
+                    </div>
                 </div>
 
         </div>
