--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     </div>
                 </div>                
             </div>
+            <!-- <hr class="fancy-line"></hr> -->
 
 
             <div id="start-directory">
