--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h5>Schoodle</h5>
                     <p><strong><i>Node.js, Express, EJS, jQuery, AJAX, HTML, Sass, Bootstrap, PostgresSQL,
                                 Knex</i></strong><br />
-                        Schoodle is a full stack web applicatin that allows users to create events and invite
+                        Schoodle is a full stack web application that allows users to create events and invite
                         participants with a randomly generated event URL.
                         it is a group midterm project where I was mainly responsible for front-end work but contributed
                         to the back-end as well</p>
